...
    <string name="account_device_revocation_success_title">Success</string>
    <string name="account_device_revocation_success">Device is now revoked!</string>
    <string name="account_device_revocation_error_title">Can\'t revoke device</string>
    <string name="account_device_revocation_wrong_password">Wrong password.</string>
    <string name="account_device_revocation_unknown_device">Unknown device.</string>
    <string name="account_device_revocation_error_unknown">Unknown error.</string>
    <string name="account_password_change">Change Password</string>
    <string name="account_password_set">Set Password</string>
    <string name="account_password_summary">Manage your account password.</string>
    <string name="account_password_change_wait_message">Changing account password</string>

    <!-- Basic Details -->
    <string name="account_preferences_basic_tab">General</string>
    <string name="account_basic_category">Basic Settings</string>
...
    <string name="account_rtp_max_port">Maximum</string>
    <string name="account_rtp_min_port">Minimum</string>
    <string name="account_rtp_port_range">Audio RTP Port Range</string>

    <!-- restore/backup -->
    <string name="account_new_device_password">Enter main password to unlock account</string>
    <string name="error_password_char_count">6 characters minimum</string>
    <string name="error_passwords_not_equals">Passwords do not match</string>
    <string name="export_account_wait_title">Please wait…</string>
    <string name="export_account_wait_message">Exporting account information</string>
    <string name="account_export_file">Backup Account</string>
    <string name="account_export_file_summary">Backup your account on your device to restore it later.</string>
    <string name="account_export_end_decryption_message">Couldn\'t unlock your account using the provided password.</string>
    <string name="account_export_end_network_title">Network error</string>
    <string name="account_export_end_network_message">Couldn\'t export account on the network. Check your connectivity.</string>
    <string name="account_export_end_error_title">Error</string>
...
    <string name="help_credentials_enter">Enter your organisation credentials</string>
    <string name="help_connect_password_enter">Enter your organisation password</string>
    <string name="account_connect_prompt_username">Username</string>

    <!-- Name registration -->
    <string name="error_username_empty">Enter a username</string>
    <string name="no_registered_name_for_account">No registered name</string>
    <string name="username_available">Username available !</string>
    <string name="register_name">Register Name</string>
    <string name="trying_to_register_name">Trying to register name</string>
    <string name="registered_username">Registered username</string>
    <string name="register_username">Register public username</string>
    <string name="register_recommended">Recommended</string>
    <string name="username_already_taken">Username already taken</string>
    <string name="invalid_username">Invalid username</string>
    <string name="unknown_error">Unknown error. Please check your network connection!</string>
    <string name="looking_for_username_availability">Looking for username availability…</string>
    <string name="account_status_connecting">Connecting</string>
    <string name="account_status_connection_error">Connection error</string>
    <string name="account_status_online">Online</string>
    <string name="account_status_unknown">Unknown</string>
...
