...

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/abc_ic_ab_back_material"
        app:title="@string/menu_item_account_settings">

        <com.glowmate.views.SwitchButton
            android:id="@+id/account_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
...
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/user_photo"
                    android:layout_width="82dp"
                    android:layout_height="82dp"
                    tools:src="@drawable/ic_contact_picture_fallback"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:hint="@string/profile_name"
                    android:textColorHint="@color/settings_submenu_header"
                    app:endIconDrawable="@drawable/baseline_edit_rounded_24"
...
                    style="?attr/textInputFilledStyle"
                    app:hintEnabled="true"
                    app:hintTextColor="@color/settings_submenu_header"
                    app:endIconTint="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:background="@drawable/rounded_background"
                        android:maxLines="1"
                        android:imeOptions="actionDone"
...
                        style="?attr/textInputFilledStyle"
                        app:hintEnabled="true"
                        app:hintTextColor="@color/settings_submenu_header"
                        android:enabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/registered_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_background"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:singleLine="true"
...
                android:divider="@drawable/layout_divider"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                style="@style/CustomRelativeLayout">

                <TextView
                    android:id="@+id/settings_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="12dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
...
