...
            android:id="@+id/profile_container"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/profile_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="15dp"
                android:contentDescription="@null"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_contact_picture_fallback" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/gallery"
                style="@style/Widget.Material3.FloatingActionButton.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:contentDescription="@string/open_the_gallery"
                android:text="@string/open_the_gallery"
                app:backgroundTint="@color/surface"
                app:layout_constraintEnd_toStartOf="@+id/camera"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_photo"
                app:rippleColor="@android:color/white"
                app:srcCompat="@drawable/baseline_insert_photo_24"
                app:tint="?attr/colorControlNormal" />
...
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-20dp"
                android:contentDescription="@string/take_a_photo"
                android:text="@string/take_a_photo"
                app:backgroundTint="@color/surface"
                app:layout_constraintEnd_toStartOf="@id/remove_photo"
                app:layout_constraintStart_toEndOf="@+id/gallery"
                app:layout_constraintTop_toBottomOf="@id/profile_photo"
                app:rippleColor="@android:color/white"
                app:srcCompat="@drawable/baseline_photo_camera_24"
                app:tint="?attr/colorControlNormal" />

...
